# PulseGuest

./: .env.dev  .env.dev.example  .env.prod  .gitignore  EULA.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json
backend/: .dockerignore  Dockerfile  alembic.ini  gunicorn_conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init.py  20260211_add_is_archived_to_surveys.py  20260213_create_stays_table.py  20260221_group_survey_bindings.py  20260223_add_full_name_to_users.py  20260223_user_group_access.py  20260226_neg_notify_h1.py  20260226_review_links_settings.py  20260226_submission_action_comment.py  20260305_create_audit_checklists.py  20260311_loc_txt.py  2578175c2831_unique_slugs_for_organizations_and_.py  add_location_text_to_checklist_runs.py  f87bc2cabb8f_create_user_organizations.py  f8aeccf02b77_add_org_location_columns.py  fe1df37186d3_defaults_for_created_at.py
backend/app/: admin.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  redis.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit_checklist.py  group_survey_binding.py  location.py  organization.py  role.py  stay.py  submission.py  survey.py  token.py  user.py  user_group_access.py  user_organization.py
backend/app/schemas/: audit.py
backend/app/services/: audit_scoring.py  auth.py  humanize_answers.py  mailer.py  qr.py  (+5 more)
backend/config/: settings.py
backend/docker/: entrypoint.sh  start.sh
backend/scripts/: seed.py
(+67 files in other folders)
