[tool.poetry]
name = "pulseguest-backend"
version = "0.1.0"
description = "PulseGuest backend"
authors = ["PulseGuest"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
gunicorn = "^22.0.0"

pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"

sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.0"

python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
argon2-cffi = "^23.1.0"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
httpx = "^0.27.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
